--- a/src/index.css
+++ b/src/index.css
@@ -20,25 +20,25 @@ header {
   flex-direction: row;
 }
 
-.title{
+.title {
   color: white;
   font-weight: bold;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 .row {
-  display: flex; 
-  flex-direction: row; 
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 50vw;
   margin: 15px;
 }
-  
+
 img {
   width: 250px;
   margin-left: 30px;
- 
 }
 
 .img-wrapper {
@@ -54,13 +54,13 @@ img {
 }
 
 .green {
-  background-color:rgb(208, 255, 208);
+  background-color: rgb(208, 255, 208);
   border: 1px solid rgb(39, 87, 39);
   color: darkgreen;
 }
 
 .red {
-  background-color:pink;
+  background-color: pink;
   border: 1px solid salmon;
   color: brown;
 }
@@ -73,13 +73,14 @@ main {
 section.bg-color {
   background-color: lightgoldenrodyellow;
   width: 30vw;
-  height:auto;
+  height: auto;
   text-align: center;
   padding: 20px;
   opacity: 0.8;
 }
 
-#fetch-data, .local-cat{
+#fetch-data,
+.local-cat {
   border: 1px solid #333;
   border-radius: 5px;
   margin: 5px;
